creating driver classes and initializing first test